--- a/examples/style/index.scss
+++ b/examples/style/index.scss
@@ -1,20 +1,25 @@
+*,
+:after,
+:before {
+    box-sizing: border-box;
+}
 
 .container {
     display: flex;
     height: 100%;
 }
 
-#demo .rw-row>div {
+#demo .rw-row > div {
     background: #00a0e9;
     padding: 16px 0;
 }
-#demo .rw-row>div:nth-child(odd) {
-    background: rgba(0,160,233,.7);
-	padding: 16px 0;
+#demo .rw-row > div:nth-child(odd) {
+    background: rgba(0, 160, 233, 0.7);
+    padding: 16px 0;
 }
 
 .slider {
-    width:200px;
+    width: 200px;
     border-right: 1px solid #f2f2fe;
     > div {
         padding: 10px;
@@ -24,26 +29,26 @@
 
     .active {
         background: #3399ff;
-        color: #FFF;
+        color: #fff;
     }
 }
 
 .content {
     overflow: auto;
     padding: 10px;
-    border: 1px solid #F2F2F2;
+    border: 1px solid #f2f2f2;
     flex: 1;
 }
 
 .table-tree {
-	border-collapse:collapse;
-	
-	tbody tr:hover {
-		background-color: #efefef;		
-	}
-	td {
-		border-bottom:1px solid #F2F2F2;	
-	}
+    border-collapse: collapse;
+
+    tbody tr:hover {
+        background-color: #efefef;
+    }
+    td {
+        border-bottom: 1px solid #f2f2f2;
+    }
 }
 
 .dialog {
@@ -57,6 +62,6 @@
 .s-item {
     padding: 20px;
     text-align: center;
-    border-bottom: 1px solid #CCC;
+    border-bottom: 1px solid #ccc;
     width: 350px;
 }
