--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,358 +1,5 @@
-$input-prefix-cls: rw-input;
-$input-height: 32px;
-$input-color: #515a6e;
-$primary-color: #2d8cf0;
+@import "_var";
+@import "_mixins";
 
-@mixin input-group($inputClass) {
-    display: table;
-    width: 100%;
-    border-collapse: separate;
-    position: relative;
-    font-size: 12px;
-    top: 1px; // fixed when using in form inline,
-
-    &-large {
-        font-size: 14px;
-    }
-
-    // Undo padding and float of grid classes
-    &[class*="col-"] {
-        float: none;
-        padding-left: 0;
-        padding-right: 0;
-    }
-
-    > [class*="col-"] {
-        padding-right: 8px;
-    }
-
-    &-prepend,
-    &-append,
-    > .#{$inputClass} {
-        display: table-cell;
-
-        //&:not(:first-child):not(:last-child) {
-        //    border-radius: 0;
-        //}
-    }
-    &-with-prepend .#{$inputClass},
-    &-with-prepend &-small .#{$inputClass} {
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-    }
-    &-with-append .#{$inputClass},
-    &-with-append &-small .#{$inputClass} {
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-    }
-
-    // &-prepend .@{css-prefix}btn,
-    // &-append .@{css-prefix}btn
-    // {
-    //     border-color: transparent;
-    //     background-color: transparent;
-    //     color: inherit;
-    //     margin: -(@input-padding-vertical-base + 2) (-@input-padding-horizontal);
-    // }
-
-    &-prepend,
-    &-append {
-        width: 1px; // To make addon/wrap as small as possible
-        white-space: nowrap;
-        vertical-align: middle;
-    }
-
-    .#{$inputClass} {
-        width: 100%;
-        float: left;
-        margin-bottom: 0;
-        position: relative;
-        z-index: 2;
-    }
-
-    &-prepend,
-    &-append {
-        padding: 4px 7px;
-        font-size: inherit;
-        font-weight: normal;
-        line-height: 1;
-        // color: @input-color;
-        text-align: center;
-        //  background-color: @input-group-bg;
-        //    border: 1px solid @input-border-color;
-        border-radius: 2px;
-    }
-
-    // Reset rounded corners
-    > span > .#{$inputClass}:first-child,
-    > .#{$inputClass}:first-child,
-    &-prepend {
-        border-bottom-right-radius: 0 !important;
-        border-top-right-radius: 0 !important;
-    }
-
-    &-prepend {
-        border-right: 0;
-    }
-    &-append {
-        border-left: 0;
-    }
-
-    > .#{$inputClass}:last-child,
-    &-append {
-        border-bottom-left-radius: 0 !important;
-        border-top-left-radius: 0 !important;
-    }
-
-    // Sizing options
-    &-large .#{$inputClass},
-    &-large > &-prepend,
-    &-large > &-append {
-        @include input-large();
-    }
-
-    &-small .#{$inputClass},
-    &-small > &-prepend,
-    &-small > &-append {
-        @include input-small();
-    }
-}
-
-@mixin input-large() {
-    font-size: 14px;
-    padding: 6px 7px;
-    height: 36px;
-}
-
-@mixin input-small() {
-    padding: 1px 7px;
-    height: 24px;
-    border-radius: 3px;
-}
-
-@mixin placeholder() {
-    // Firefox
-    &::-moz-placeholder {
-        color: #c5c8ce;
-        opacity: 1; // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526
-    }
-    // Internet Explorer 10+
-    &:-ms-input-placeholder {
-        color: #c5c8ce;
-    }
-    // Safari and Chrome
-    &::-webkit-input-placeholder {
-        color: #c5c8ce;
-    }
-}
-
-@mixin input() {
-    display: inline-block;
-    width: 100%;
-    height: $input-height;
-    line-height: $input-height;
-    padding: 4px 7px;
-    font-size: 12px;
-    border: 1px solid #dcdee2;
-    border-radius: 2px;
-    color: #515a6e;
-    background-color: #fff;
-    background-image: none;
-    position: relative;
-    outline: none;
-    cursor: text;
-    @include placeholder();
-
-    //transition: border @transition-time @ease-in-out, background @transition-time @ease-in-out, box-shadow @transition-time @ease-in-out;
-
-    &:hover {
-        border-color: #57a3f3;
-    }
-
-    &:focus {
-        border-color: #57a3f3;
-    }
-
-    &[disabled] {
-        background-color: #f3f3f3;
-        opacity: 1;
-        cursor: not-allowed;
-        color: #ccc;
-        &:hover {
-            border-color: #dcdee2;
-        }
-    }
-
-    // Reset height for textarea
-    // textarea& {
-    //     max-width: 100%;
-    //     height: auto;
-    //     min-height: $input-height;
-    //     vertical-align: bottom;
-    //     font-size: 12px;
-    // }
-
-    // Size
-    &-large {
-        @include input-large();
-    }
-
-    &-small {
-        @include input-small();
-    }
-}
-
-.#{$input-prefix-cls} {
-    @include input();
-
-    &-wrapper {
-        display: inline-block;
-        width: 100%;
-        line-height: normal;
-        position: relative;
-        vertical-align: middle;
-    }
-
-    &-icon {
-        width: 32px;
-        height: $input-height;
-        line-height: $input-height;
-        font-size: 16px;
-        text-align: center;
-        // color: @subsidiary-color;
-        position: absolute;
-        right: 0;
-        z-index: 3;
-    }
-
-    &-hide-icon &-icon {
-        display: none;
-    }
-    &-icon-validate {
-        display: none;
-    }
-
-    &-icon-clear {
-        display: none;
-    }
-
-    &-wrapper:hover {
-        .#{input-prefix-cls}-icon-clear {
-            display: inline-block;
-        }
-    }
-
-    &-icon-normal + & {
-        padding-right: 32px;
-    }
-
-    &-hide-icon &-icon-normal + & {
-        padding-right: 7px;
-    }
-
-    &-wrapper-large &-icon {
-        font-size: 18px;
-        height: 36px;
-        line-height: 1.5;
-    }
-    &-wrapper-small &-icon {
-        width: 24px;
-        font-size: 14px;
-        height: 24px;
-        line-height: 24px;
-    }
-
-    &-prefix,
-    &-suffix {
-        width: 32px;
-        height: 100%;
-        text-align: center;
-        position: absolute;
-        left: 0;
-        top: 0;
-        z-index: 1;
-        i {
-            font-size: 16px;
-            line-height: $input-height;
-        }
-    }
-    &-suffix {
-        left: auto;
-        right: 0;
-    }
-
-    &-with-prefix {
-        padding-left: 32px;
-    }
-    &-with-suffix {
-        padding-right: 32px;
-    }
-
-    // search
-    &-search {
-        cursor: pointer;
-        padding: 0 16px !important;
-        background: $primary-color !important;
-        color: #fff !important;
-        border-color: $primary-color !important;
-        // transition: all $transition-time @ease-in-out;
-        position: relative;
-        z-index: 2;
-
-        i {
-            font-size: 16px;
-        }
-
-        &:hover {
-            background: tint($primary-color, 20%) !important;
-            border-color: tint($primary-color, 20%) !important;
-        }
-        &:active {
-            background: shade($primary-color, 5%) !important;
-            border-color: shade($primary-color, 5%) !important;
-        }
-
-        &-icon {
-            cursor: pointer;
-            // transition: color @transition-time @ease-in-out;
-            &:hover {
-                color: inherit;
-            }
-        }
-
-        &:before {
-            content: "";
-            display: block;
-            width: 1px;
-            position: absolute;
-            top: -1px;
-            bottom: -1px;
-            left: -1px;
-            background: inherit;
-        }
-    }
-
-    &-wrapper-small &-search {
-        padding: 0 12px !important;
-        i {
-            font-size: 14px;
-        }
-    }
-    &-wrapper-large &-search {
-        padding: 0 20px !important;
-        i {
-            font-size: 18px;
-        }
-    }
-    &-with-search {
-        &:hover {
-            .#{$input-prefix-cls} {
-                border-color: tint($primary-color, 20%);
-            }
-        }
-    }
-}
-
-.#{$input-prefix-cls}-group {
-    @include input-group($input-prefix-cls);
-}
+@import "Input";
+@import "Search";
