--- a/examples/style/index.scss
+++ b/examples/style/index.scss
@@ -65,3 +65,8 @@
     border-bottom: 1px solid #ccc;
     width: 350px;
 }
+.input-demo-wrapper {
+    .rw-input-wrapper {
+        margin: 5px;
+    }
+}
