--- a/src/style/Input.scss
+++ b/src/style/Input.scss
@@ -25,9 +25,9 @@
         // line-height: $input-height-base;
         font-size: 16px;
         text-align: center;
-        // color: @subsidiary-color;
+        color: $subsidiary-color;
         position: absolute;
-        right: 0;
+        //right: 0;
         z-index: 3;
 
         top: 50%;
