--- a/src/style/Search.scss
+++ b/src/style/Search.scss
@@ -3,19 +3,6 @@
 
 // search
 .#{$input-prefix-cls} {
-    &-wrapper-small &-search {
-        padding: 0 12px !important;
-        i {
-            font-size: 14px;
-        }
-    }
-    &-wrapper-large &-search {
-        padding: 0 20px !important;
-        i {
-            font-size: 18px;
-        }
-    }
-
     &-with-search {
         // &:hover {
         //     .#{$input-prefix-cls} {
@@ -25,38 +12,43 @@
 
         .#{$input-prefix-cls}-suffix {
             cursor: pointer;
+            color: tint($subsidiary-color, 20%);
+            .#{$input-prefix-cls}-icon {
+                color: inherit;
+            }
+            &:hover {
+                color: $subsidiary-color;
+            }
+            &:active {
+                color: shade($subsidiary-color, 10%);
+            }
         }
 
         > .#{$input-prefix-cls}-group-append {
             cursor: pointer;
-            padding: 0 16px !important;
-            background: $primary-color !important;
-            color: #fff !important;
-            border-color: $primary-color !important;
+            background: $primary-color;
+            color: #fff;
+            border-color: $primary-color;
             // transition: all $transition-time @ease-in-out;
             position: relative;
             z-index: 2;
 
-            i {
-                font-size: 16px;
-            }
-
             &:hover {
-                background: tint($primary-color, 20%) !important;
-                border-color: tint($primary-color, 20%) !important;
+                background: tint($primary-color, 20%);
+                border-color: tint($primary-color, 20%);
             }
             &:active {
-                background: shade($primary-color, 5%) !important;
-                border-color: shade($primary-color, 5%) !important;
+                background: shade($primary-color, 5%);
+                border-color: shade($primary-color, 5%);
             }
 
-            &-icon {
-                cursor: pointer;
-                // transition: color @transition-time @ease-in-out;
-                &:hover {
-                    color: inherit;
-                }
-            }
+            // &-icon {
+            //     cursor: pointer;
+            //     // transition: color @transition-time @ease-in-out;
+            //     &:hover {
+            //         color: inherit;
+            //     }
+            // }
 
             &:before {
                 content: "";
@@ -68,6 +60,27 @@
                 left: -1px;
                 background: inherit;
             }
+        }
+    }
+
+    &-with-search > .#{$input-prefix-cls}-group-append {
+        padding: 0 16px;
+        user-select: none;
+        .#{$input-prefix-cls}-icon-search {
+            font-size: 16px;
+        }
+    }
+
+    &-with-search.#{$input-prefix-cls}-wrapper-small > .#{$input-prefix-cls}-group-append {
+        padding: 0 12px;
+        .#{$input-prefix-cls}-icon-search {
+            font-size: 14px;
+        }
+    }
+    &-with-search.#{$input-prefix-cls}-wrapper-large > .#{$input-prefix-cls}-group-append {
+        padding: 0 20px;
+        .#{$input-prefix-cls}-icon-search {
+            font-size: 18px;
         }
     }
 }
