--- a/src/style/_var.scss
+++ b/src/style/_var.scss
@@ -15,6 +15,7 @@ $component-background: #fff;
 $font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial,
     sans-serif;
 $code-family: Consolas, Menlo, Courier, monospace;
+$subsidiary-color: #808695;
 $title-color: #17233d;
 $text-color: #515a6e;
 $font-size-base: 14px;
