Modified   src/Input.js Modified   src/Search.js Modified   src/style/Input.scss

--- a/src/style/Input.scss
+++ b/src/style/Input.scss
@@ -53,9 +53,9 @@
     //     }
     // }
 
-    &-icon-normal + & {
-        padding-right: 32px;
-    }
+    // &-icon-normal + & {
+    //     padding-right: 32px;
+    // }
 
     // &-hide-icon &-icon-normal + & {
     //     padding-right: 7px;
