--- a/src/style/Input.scss
+++ b/src/style/Input.scss
@@ -1,6 +1,3 @@
-@import "_var";
-@import "_mixins";
-
 .#{$input-prefix-cls} {
     @include input();
 
@@ -17,6 +14,9 @@
         &:hover:not(.#{$input-prefix-cls}-group) .#{$input-prefix-cls}:not(.#{$input-prefix-cls}-disabled) {
             @include hover();
         }
+
+        @include prefix-padding($input-prefix-cls);
+        @include suffix-padding($input-prefix-cls);
     }
 
     &-icon {
@@ -107,12 +107,12 @@
     //     }
     // }
 
-    &-with-prefix {
-        padding-left: 32px;
-    }
-    &-with-suffix {
-        padding-right: 32px;
-    }
+    // &-with-prefix {
+    //     padding-left: 32px;
+    // }
+    // &-with-suffix {
+    //     padding-right: 32px;
+    // };
 }
 
 .#{$input-prefix-cls}-group {
