--- a/lib/style/index.css
+++ b/lib/style/index.css
@@ -2,9 +2,6 @@
 .input-group-error-prepend, .input-group-error-append {
   background-color: #fff;
   border: 1px solid #ed4014; }
-  .input-group-error-prepend .rwselect-selection, .input-group-error-append .rwselect-selection {
-    background-color: inherit;
-    border: 1px solid transparent; }
 
 .input-group-error-prepend {
   border-right: 0; }
@@ -25,7 +22,8 @@
   background-color: #fff;
   background-image: none;
   position: relative;
-  cursor: text; }
+  cursor: text;
+  z-index: 2; }
   .rw-input::-moz-placeholder {
     color: #c5c8ce;
     opacity: 1; }
@@ -78,7 +76,6 @@
     text-align: center;
     color: #808695;
     position: absolute;
-    z-index: 3;
     top: 50%;
     left: 50%;
     -webkit-transform: translateY(-50%) translateX(-50%);
@@ -91,16 +88,26 @@
   .rw-input-wrapper-small .rw-input-icon {
     font-size: 14px; }
   .rw-input-prefix, .rw-input-suffix {
-    width: 32px;
-    height: 100%;
+    width: 30px;
     text-align: center;
     position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 1; }
+    left: 1px;
+    top: 1px;
+    bottom: 1px;
+    z-index: 3;
+    border-radius: 4px; }
   .rw-input-suffix {
     left: auto;
-    right: 0; }
+    right: 1px; }
+  .rw-input-wrapper-small .rw-input-prefix,
+  .rw-input-wrapper-small .rw-input-suffix {
+    border-radius: 3px; }
+  .rw-input-wrapper-small .rw-input-prefix, .rw-input-prefix {
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0; }
+  .rw-input-wrapper-small .rw-input-suffix, .rw-input-suffix {
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0; }
 
 .rw-input-group {
   display: table;
@@ -130,9 +137,11 @@
   .rw-input-group > .rw-input-affix-wrapper,
   .rw-input-group > .rw-input {
     display: table-cell; }
+  .rw-input-group-with-prepend .rw-input-prefix,
   .rw-input-group-with-prepend .rw-input {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0; }
+  .rw-input-group-with-append .rw-input-suffix,
   .rw-input-group-with-append .rw-input {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0; }
@@ -151,7 +160,6 @@
     padding: 4px 7px;
     font-size: inherit;
     font-weight: normal;
-    line-height: 1;
     color: #515a6e;
     text-align: center;
     background-color: #f8f8f9;
@@ -188,7 +196,7 @@
   color: #fff;
   border-color: #2d8cf0;
   position: relative;
-  z-index: 2; }
+  z-index: 1; }
   .rw-input-with-search > .rw-input-group-append:hover {
     background: #57a3f3;
     border-color: #57a3f3; }
