--- a/src/style/Input.scss
+++ b/src/style/Input.scss
@@ -20,99 +20,62 @@
     }
 
     &-icon {
-        // width: 32px;
-        // height: $input-height-base;
-        // line-height: $input-height-base;
         font-size: 16px;
         text-align: center;
         color: $subsidiary-color;
         position: absolute;
-        //right: 0;
-        z-index: 3;
 
         top: 50%;
         left: 50%;
         transform: translateY(-50%) translateX(-50%);
     }
 
-    // &-hide-icon &-icon {
-    //     display: none;
-    // }
-    // &-icon-validate {
-    //     display: none;
-    // }
-
     &-icon-clear {
-        // display: none;
         cursor: pointer;
     }
 
-    // &-wrapper:hover {
-    //     .#{$input-prefix-cls}-icon-clear {
-    //         display: inline-block;
-    //     }
-    // }
-
-    // &-icon-normal + & {
-    //     padding-right: 32px;
-    // }
-
-    // &-hide-icon &-icon-normal + & {
-    //     padding-right: 7px;
-    // }
-
     &-wrapper-large &-icon {
         font-size: 18px;
-        // height: 36px;
-        // line-height: 1.5;
     }
     &-wrapper-small &-icon {
         font-size: 14px;
-        //width: 24px;
-        // height: 24px;
-        // line-height: 24px;
     }
 
     &-prefix,
     &-suffix {
-        width: 32px;
-        height: 100%;
+        width: 30px;
+        // height: 100%;
         text-align: center;
         position: absolute;
-        left: 0;
-        top: 0;
-        z-index: 1;
-        // i {
-        //     font-size: 16px;
-        //     line-height: $input-height-base;
-        // }
+        left: 1px;
+        top: 1px;
+        bottom: 1px;
+        z-index: 3;
+
+        border-radius: $btn-border-radius;
     }
+
     &-suffix {
         left: auto;
-        right: 0;
+        right: 1px;
     }
 
-    // &-wrapper-small &-prefix,
-    // &-wrapper-small &-suffix {
-    //     i {
-    //         font-size: 14px;
-    //         line-height: $input-height-small;
-    //     }
-    // }
-    // &-wrapper-large &-prefix,
-    // &-wrapper-large &-suffix {
-    //     i {
-    //         font-size: 18px;
-    //         line-height: $input-height-large;
-    //     }
-    // }
+    &-wrapper-small &-prefix,
+    &-wrapper-small &-suffix {
+        border-radius: $btn-border-radius-small;
+    }
 
-    // &-with-prefix {
-    //     padding-left: 32px;
-    // }
-    // &-with-suffix {
-    //     padding-right: 32px;
-    // };
+    &-wrapper-small &-prefix,
+    &-prefix {
+        border-bottom-right-radius: 0;
+        border-top-right-radius: 0;
+    }
+
+    &-wrapper-small &-suffix,
+    &-suffix {
+        border-bottom-left-radius: 0;
+        border-top-left-radius: 0;
+    }
 }
 
 .#{$input-prefix-cls}-group {
