--- a/src/style/_var.scss
+++ b/src/style/_var.scss
@@ -1,5 +1,6 @@
 //Base
 $css-prefix: rw;
+$form-item-prefix-cls: rw-form-item;
 $error-color: #ed4014;
 $primary-color: #2d8cf0;
 $btn-disable-color: #c5c8ce;
